[package]
name = "bips-chronological"
version = "0.1.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono     = "0.4.19"
regex      = "1.4.5"
serde_yaml = "0.8.17"

[dependencies.serde]
version  = "1.0.125"
features = ["derive"]
